[tool.poetry]
name = "carduus"
version = "0.1.0"
description = "PySpark implementation of the Open Privacy Preserving Record Linkage protocol."
authors = ["Eddie Pantridge <eddie@spindlehealth.com>"]
readme = "README.md"
packages = [{ include = "carduus" }]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.5"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
jellyfish = "^1.0.3"
cryptography = "^42.0.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pyspark = { version = "^3.5", extras = ["connect"] }
coverage = "^7.4"
black = "^24.4"
mypy = "^0.991"
mkdocs = "^1.5"
mkdocs-material = "^9.5"
mkdocstrings = { version = "^0.24", extras = ["python"] }
mkdocs-jupyter = "^0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 96
