[tool.poetry]
name = "carduus"
version = "0.2.0"
description = "PySpark implementation of the Open Privacy Preserving Record Linkage protocol."
authors = ["Eddie Pantridge <eddie@spindlehealth.com>"]
readme = "README.md"
packages = [{ include = "carduus" }]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5"
jellyfish = "^1.0.3"
cryptography = "^44.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pyspark = { version = "^3.5", extras = ["connect"] }
# pyspark.testing.utils breaks on numpy 2. 
numpy = "<2.0"
coverage = "^7.4"
black = "^24.4"
mypy = "^0.991"
mkdocs = ">=1.6"
mkdocs-material = ">=9.6"
mkdocstrings = ">=0.28"
mkdocstrings-python = ">=1.14.6"
mkdocs-jupyter = ">=0.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 96
